--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,13 @@
                     </ul>
                 </li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Entry</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('dataEntry.list_elements') }}">Elements</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
