--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,14 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav">
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Event Frames</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('admin.list_eventFrameTemplates') }}">Event Frame Templates</a></li>
+                        <li><a href="{{ url_for('admin.list_eventFrames') }}">Event Frames</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav">
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Entry</a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('dataEntry.list_elements') }}">Elements</a></li>
