Added lookup values for tag values functionality. Added element dashboard for data entry. Updated database model.

--- a/app/templates/elements/selectElement.html
+++ b/app/templates/elements/selectElement.html
@@ -2,7 +2,9 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Data Entry - Elements{% endblock %}
+{% block title %}
+Data Entry - Elements
+{% endblock %}
 
 {% block page_content %}
 <div>
