--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}{% endblock %}
+{% block title %}
+{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -13,27 +14,21 @@
             </button>
             <a class="navbar-brand" href="/">Brewery Pi</a>
         </div>
-        <div class="navbar-collapse collapse"><!-- 
-            <ul class="nav navbar-nav">
-                <li><a href="{#{ url_for('admin.list_enterprises') }#}">Enterprises</a></li>
-                <li><a href="{#{ url_for('admin.list_sites') }#}">Sites</a></li>
-                <li><a href="{#{ url_for('admin.list_areas') }#}">Areas</a></li>
-            </ul> -->
+        <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Brewery Modeling</a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('admin.list_enterprises') }}">Enterprises</a></li>
                         <li><a href="{{ url_for('admin.list_sites') }}">Sites</a></li>
                         <li><a href="{{ url_for('admin.list_areas') }}">Areas</a></li>
-                        <li><a href="{{ url_for('admin.list_lookups') }}">Lookups</a></li>
-                        <li><a href="{{ url_for('admin.list_lookupValues') }}">Lookup Values</a></li>
+                        <li><a href="{{ url_for('lookups.listLookups') }}">Lookups</a></li>
                     </ul>
                 </li>
             </ul>
             <ul class="nav navbar-nav">
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tags</a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('admin.list_tags') }}">Tags</a></li>
+                        <li><a href="{{ url_for('tags.listTags') }}">Tags</a></li>
                         <li><a href="{{ url_for('admin.list_unitsOfMeasurement') }}">Units</a></li>
                     </ul>
                 </li>
@@ -59,7 +54,7 @@
             <ul class="nav navbar-nav">
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Entry</a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('dataEntry.list_elements') }}">Elements</a></li>
+                        <li><a href="{{ url_for('elements.selectElement') }}">Element Dashboard</a></li>
                     </ul>
                 </li>
             </ul>
