Resolves #18 and resolves #3. Fixes #1, fixes #2 and fixes #7.

--- a/app/templates/home/defaults.html
+++ b/app/templates/home/defaults.html
@@ -1,10 +1,10 @@
-<!-- app/templates/home/defaults.html -->
-
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% extends "base.html" %}
 
-{% block title %}System Defaults{% endblock %}
+{% block title %}
+System Defaults
+{% endblock %}
 
 {% block page_content %}
 {{ wtf.quick_form(form) }}
