--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,60 +1,61 @@
 {% extends "bootstrap/base.html" %}
+
 {% block title %}
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+<div class = "navbar navbar-inverse" role = "navigation">
+    <div class = "container">
+        <div class = "navbar-header">
+            <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = ".navbar-collapse">
+                <span class = "sr-only">Toggle navigation</span>
+                <span class = "icon-bar"></span>
+                <span class = "icon-bar"></span>
+                <span class = "icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Brewery Pi</a>
+            <a class = "navbar-brand" href = "/">Brewery Pi</a>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Brewery Modeling</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('admin.list_enterprises') }}">Enterprises</a></li>
-                        <li><a href="{{ url_for('admin.list_sites') }}">Sites</a></li>
-                        <li><a href="{{ url_for('admin.list_areas') }}">Areas</a></li>
-                        <li><a href="{{ url_for('lookups.listLookups') }}">Lookups</a></li>
+        <div class = "navbar-collapse collapse">
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Brewery Modeling</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("enterprises.listEnterprises") }}">Enterprises</a></li>
+                        <li><a href = "{{ url_for("sites.listSites") }}">Sites</a></li>
+                        <li><a href = "{{ url_for("areas.listAreas") }}">Areas</a></li>
+                        <li><a href = "{{ url_for("lookups.listLookups") }}">Lookups</a></li>
                     </ul>
                 </li>
             </ul>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tags</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('tags.listTags') }}">Tags</a></li>
-                        <li><a href="{{ url_for('admin.list_unitsOfMeasurement') }}">Units</a></li>
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
+                        <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                     </ul>
                 </li>
             </ul>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Elements</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('admin.list_elementTemplates') }}">Element Templates</a></li>
-                        <li><a href="{{ url_for('admin.list_elements') }}">Elements</a></li>
-                        <li><a href="{{ url_for('admin.list_attributeTemplates') }}">Attribute Templates</a></li>
-                        <li><a href="{{ url_for('admin.list_elementAttributes') }}">Element Attributes</a></li>
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Element Templates</a></li>
+                        <li><a href = "{{ url_for("elements.listElements") }}">Elements</a></li>
+                        <li><a href = "{{ url_for("attributeTemplates.listAttributeTemplates") }}">Attribute Templates</a></li>
+                        <li><a href = "{{ url_for("elementAttributes.listElementAttributes") }}">Element Attributes</a></li>
                     </ul>
                 </li>
             </ul>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Event Frames</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('admin.list_eventFrameTemplates') }}">Event Frame Templates</a></li>
-                        <li><a href="{{ url_for('admin.list_eventFrames') }}">Event Frames</a></li>
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates") }}">Event Frame Templates</a></li>
+                        <li><a href = "{{ url_for("eventFrames.listEventFrames") }}">Event Frames</a></li>
                     </ul>
                 </li>
             </ul>
-            <ul class="nav navbar-nav">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Entry</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('elements.selectElement') }}">Element Dashboard</a></li>
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("elements.selectElement") }}">Element Dashboard</a></li>
                     </ul>
                 </li>
             </ul>
@@ -64,17 +65,14 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-
+<div class = "container">
     {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <div class = "alert alert-warning">
+        <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
         {{ message }}
     </div>
     {% endfor %}
-
     {% block page_content %}
     {% endblock %}
-
 </div>
 {% endblock %}
