--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -1,8 +1,8 @@
-<!-- app/templates/home/index.html -->
-
 {% extends "base.html" %}
 
-{% block title %}Brewery Pi{% endblock %}
+{% block title %}
+Brewery Pi
+{% endblock %}
 
 {% block page_content %}
 <h1>Brewery Pi</h1>
