--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,6 +45,14 @@
                 </li>
             </ul>
             <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates") }}">Event Frame Templates</a></li>
+                        <li><a href = "{{ url_for("eventFrames.listEventFrames") }}">Event Frames</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class = "nav navbar-nav">
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry</a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("elements.selectElement") }}">Element Dashboard</a></li>
