--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags</a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
+                        <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
                         <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                     </ul>
                 </li>
