--- a/app/templates/tags/importTags.html
+++ b/app/templates/tags/importTags.html
@@ -18,6 +18,13 @@ Import Tags
     {% endfor %}
 </div>
 {% endif %}
+{% if warnings %}
+<div class = "alert alert-warning" role = "alert">
+    {% for warning in warnings %}
+        <p>{{ warning }}</p>
+    {% endfor %}
+</div>
+{% endif %}
 {% if errors %}
 <div class = "alert alert-danger" role = "alert">
     {% for error in errors %}
