Tag export and import implemented with add and edit functionality.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,7 @@
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
                         <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
+                        <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
                         <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                     </ul>
                 </li>
