Pass element name to element attribute values dashboard to avoid empty element attributes.

--- a/app/templates/elementAttributes/elementAttributeValuesDashboard.html
+++ b/app/templates/elementAttributes/elementAttributeValuesDashboard.html
@@ -8,7 +8,7 @@ Data Entry - Element Attribute Values
 
 {% block page_content %}
 <div>
-    <h1>{{ elementAttributes[0].Element.Name }}</h1>
+    <h1>{{ elementName }}</h1>
     <table class = "table">
         <thead>
             <tr>
