Removed enterprise abbreviation, site abbreviation and parent element template name from "Parent Event Frame Template" column as this in displayed in the column to the left as "Element template".

--- a/app/templates/eventFrameTemplates/eventFrameTemplates.html
+++ b/app/templates/eventFrameTemplates/eventFrameTemplates.html
@@ -25,9 +25,7 @@ Event Frame Templates
                 <td>{{ eventFrameTemplate.ElementTemplate.Site.Enterprise.Abbreviation + "_" + eventFrameTemplate.ElementTemplate.Site.Abbreviation + "_" +
                     eventFrameTemplate.ElementTemplate.Name }}</td>
                 {% if eventFrameTemplate.ParentEventFrameTemplateId %}
-                    <td>{{ eventFrameTemplate.ParentEventFrameTemplate.ElementTemplate.Site.Enterprise.Abbreviation + "_" + 
-                        eventFrameTemplate.ParentEventFrameTemplate.ElementTemplate.Site.Abbreviation + "_" + 
-                        eventFrameTemplate.ParentEventFrameTemplate.ElementTemplate.Name + "_" + eventFrameTemplate.ParentEventFrameTemplate.Name }}</td>
+                    <td>{{ eventFrameTemplate.ParentEventFrameTemplate.Name }}</td>
                 {% else %}
                     <td></td>
                 {% endif %}
