--- a/app/templates/elementAttributes/elementAttributeValuesDashboard.html
+++ b/app/templates/elementAttributes/elementAttributeValuesDashboard.html
@@ -24,26 +24,34 @@ Data Entry - Element Attribute Values
         <tbody>
             {% for elementAttribute in elementAttributes %}
             <tr>
-                <td><a class = "btn btn-default" href = "{{ url_for("elementAttributes.addElementAttributeValue", elementId = elementAttribute.ElementId,
-                    tagId = elementAttribute.Tag.TagId, lookupId = elementAttribute.Tag.LookupId) }}">Add</a></td>
+                <td><a class = "btn btn-default" data-toggle = "tooltip" title = "List Values"
+                    href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId, 
+                    lookupId = elementAttribute.Tag.LookupId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                 <td>{{ elementAttribute.AttributeTemplate.Name }}</td>
                 {% if elementAttribute.Tag.TagValues[0] %}
                     {% set firstTagValue = elementAttribute.Tag.TagValues | sort(attribute = "Timestamp", reverse = True) | first %}
                     <td>{{ firstTagValue.Timestamp }}</td>
                     {% if elementAttribute.Tag.LookupId %}
-                        <td>{{ elementAttribute.Tag.Lookup.LookupValues | selectattr("Value", "equalto", firstTagValue.Value) | map(attribute = "Name") | list | first }}</td>                    
+                        <td>{{ elementAttribute.Tag.Lookup.LookupValues | selectattr("Value", "equalto", firstTagValue.Value) | map(attribute = "Name") |
+                            list | first }}</td>                    
                     {% else %}
                         <td>{{ firstTagValue.Value }} {{ firstTagValue.Tag.UnitOfMeasurement.Abbreviation }}</td>                    
                     {% endif %}
-                    <td><a class = "btn btn-default" href = "{{ url_for("elementAttributes.editElementAttributeValue", elementId = elementAttribute.ElementId,
-                        tagValueId = firstTagValue.TagValueId) }}">Edit</a></td>
-                    <td><a class = "btn btn-default" href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId, 
-                        lookupId = elementAttribute.Tag.LookupId) }}">Values</a></td>
-                    <td><a class = "btn btn-default" href = "{{ url_for("elementAttributes.deleteElementAttributeValue",
-                        elementId = elementAttribute.ElementId, tagValueId = firstTagValue.TagValueId) }}">Delete</a></td>
                 {% else %}
                     <td></td>
                     <td></td>
+                {% endif %}
+                <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Add"
+                    href = "{{ url_for("elementAttributes.addElementAttributeValue", elementId = elementAttribute.ElementId,
+                    tagId = elementAttribute.Tag.TagId, lookupId = elementAttribute.Tag.LookupId) }}"><span class="glyphicon glyphicon-plus"></span></a></td>
+                {% if elementAttribute.Tag.TagValues[0] %}
+                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
+                        href = "{{ url_for("elementAttributes.editElementAttributeValue", elementId = elementAttribute.ElementId,
+                        tagValueId = firstTagValue.TagValueId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
+                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
+                        href = "{{ url_for("elementAttributes.deleteElementAttributeValue",
+                        elementId = elementAttribute.ElementId, tagValueId = firstTagValue.TagValueId) }}"><span class="glyphicon glyphicon-trash"></a></td>
+                {% else %}
                     <td></td>
                     <td></td>
                 {% endif %}
