--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,11 +37,17 @@
                 </li>
             </ul>
             <ul class = "nav navbar-nav">
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements</a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Templates</a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Element Templates</a></li>
-                        <li><a href = "{{ url_for("elements.listElements") }}">Elements</a></li>
                         <li><a href = "{{ url_for("attributeTemplates.listAttributeTemplates") }}">Attribute Templates</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class = "nav navbar-nav">
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements</a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("elements.listElements") }}">Elements</a></li>
                         <li><a href = "{{ url_for("elementAttributes.listElementAttributes") }}">Element Attributes</a></li>
                         <li><a href = "{{ url_for("elementAttributes.importElementAttributes") }}">Import</a></li>
                         <li><a href = "{{ url_for("elementAttributes.exportElementAttributes") }}">Export</a></li>
