--- a/app/templates/elementAttributes/elementAttributes.html
+++ b/app/templates/elementAttributes/elementAttributes.html
@@ -7,7 +7,8 @@ Element Attributes
 {% block page_content %}
 <div>
     <h1>Element Attributes</h1>
-    <a class = "btn btn-default" href = "{{ url_for("elementAttributes.addElementAttribute") }}" role = "button">Add</a>
+    <a class = "btn btn-default" href = "{{ url_for("elementAttributes.addElementAttribute") }}" role = "button">
+        <span class="glyphicon glyphicon-plus"></span></a>
     <table class = "table">
         <thead>
             <tr>
@@ -31,9 +32,9 @@ Element Attributes
                 <td>{{ elementAttribute.Tag.Area.Site.Enterprise.Abbreviation + "_" + elementAttribute.Tag.Area.Site.Abbreviation + "_" +
                     elementAttribute.Tag.Area.Abbreviation + "_" + elementAttribute.Tag.Name }}</td>
                 <td><a class = "btn btn-default" href = "{{ url_for("elementAttributes.editElementAttribute",
-                    elementAttributeId = elementAttribute.ElementAttributeId) }}">Edit</a></td>
+                    elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
                 <td><a class = "btn btn-default" href = "{{ url_for("elementAttributes.deleteElementAttribute",
-                    elementAttributeId = elementAttribute.ElementAttributeId) }}">Delete</a></td>
+                    elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
