--- a/app/templates/attributeTemplates/attributeTemplates.html
+++ b/app/templates/attributeTemplates/attributeTemplates.html
@@ -7,7 +7,8 @@ Attribute Templates
 {% block page_content %}
 <div>
     <h1>Attribute Templates</h1>
-    <a class = "btn btn-default" href = "{{ url_for("attributeTemplates.addAttributeTemplate") }}" role = "button">Add</a>
+    <a class = "btn btn-default" href = "{{ url_for("attributeTemplates.addAttributeTemplate") }}" role = "button">
+        <span class="glyphicon glyphicon-plus"></span></a>
     <table class = "table">
         <thead>
             <tr>
@@ -26,9 +27,9 @@ Attribute Templates
                 <td>{{ attributeTemplate.Name }}</td>
                 <td>{{ attributeTemplate.Description }}</td>
                 <td><a class = "btn btn-default" href = "{{ url_for("attributeTemplates.editAttributeTemplate",
-                    attributeTemplateId = attributeTemplate.AttributeTemplateId) }}">Edit</a></td>
+                    attributeTemplateId = attributeTemplate.AttributeTemplateId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
                 <td><a class = "btn btn-default" href = "{{ url_for("attributeTemplates.deleteAttributeTemplate",
-                    attributeTemplateId = attributeTemplate.AttributeTemplateId) }}">Delete</a></td>
+                    attributeTemplateId = attributeTemplate.AttributeTemplateId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
