--- a/app/templates/elementTemplates/elementTemplates.html
+++ b/app/templates/elementTemplates/elementTemplates.html
@@ -7,7 +7,8 @@ Element Templates
 {% block page_content %}
 <div>
     <h1>Element Templates</h1>
-    <a class = "btn btn-default" href = "{{ url_for("elementTemplates.addElementTemplate") }}" role = "button">Add</a>
+    <a class = "btn btn-default" href = "{{ url_for("elementTemplates.addElementTemplate") }}" role = "button">
+        <span class="glyphicon glyphicon-plus"></span></a>
     <table class = "table">
         <thead>
             <tr>
@@ -25,9 +26,9 @@ Element Templates
                 <td>{{ elementTemplate.Name }}</td>
                 <td>{{ elementTemplate.Description }}</td>
                 <td><a class = "btn btn-default" href = "{{ url_for("elementTemplates.editElementTemplate",
-                    elementTemplateId = elementTemplate.ElementTemplateId) }}">Edit</a></td>
+                    elementTemplateId = elementTemplate.ElementTemplateId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
                 <td><a class = "btn btn-default" href = "{{ url_for("elementTemplates.deleteElementTemplate",
-                    elementTemplateId = elementTemplate.ElementTemplateId) }}">Delete</a></td>
+                    elementTemplateId = elementTemplate.ElementTemplateId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
