--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -9,7 +9,8 @@ Units of Measurment
 {% block page_content %}
 <div>
     <h1>Units of Measurment</h1>
-    <a class = "btn btn-default" href = "{{ url_for("unitOfMeasurements.addUnitOfMeasurement") }}" role = "button">Add</a>
+    <a class = "btn btn-default" href = "{{ url_for("unitOfMeasurements.addUnitOfMeasurement") }}" role = "button">
+        <span class="glyphicon glyphicon-plus"></span></a>
     <table class = "table">
         <thead>
             <tr>
@@ -25,9 +26,9 @@ Units of Measurment
                 <td>{{ unitOfMeasurement.Name }}</td>
                 <td>{{ unitOfMeasurement.Abbreviation }}</td>
                 <td><a class = "btn btn-default" href = "{{ url_for("unitOfMeasurements.editUnitOfMeasurement",
-                    unitOfMeasurementId = unitOfMeasurement.UnitOfMeasurementId) }}">Edit</a></td>
+                    unitOfMeasurementId = unitOfMeasurement.UnitOfMeasurementId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
                 <td><a class = "btn btn-default" href = "{{ url_for("unitOfMeasurements.deleteUnitOfMeasurement",
-                    unitOfMeasurementId = unitOfMeasurement.UnitOfMeasurementId) }}">Delete</a></td>
+                    unitOfMeasurementId = unitOfMeasurement.UnitOfMeasurementId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
